--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="nl">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resepten | Pasta gremolata met ricotta</title>
+</head>
+
+<body>
+    <h1>Pasta gremolata met ricotta</h1>
+    <ul>
+        <li><a href="index.html">Pasta gremolata met ricotta</a></li>
+        <li><a href="pasta-met-kerstomaatjes.html">Pasta met kerstomaatjes</a></li>
+        <li><a href="chorizo-met-ei.html">Chorizo met ei</a></li>
+
+    </ul>
+    <img src="images/pasta.jpg">
+    <h2>Ingredienten</h2>
+    <ul>
+        <li>½ kopje gehakte peterselie</li>
+        <li> 6 teentjes knoflook fijngehakt</li>
+        <li> Grof geraspte schil van 2 citroenen plus het sap van 1 citroen</li>
+        <li> 1/4 kopje extra vergine olijfolie</li>
+        <li> Kosher zout en versgemalen peper naar smaak</li>
+        <li> 1 pond pasta</li>
+    </ul>
+    <h2>Ingredienten</h2>
+    <ol>
+        <li>Meng in een kom de peterselie, knoflook, citroenschil en citroensap. Roer om te combineren. Breng op smaak
+            met zout, peper en olijfolie. (U kunt dit ook in een blender maken als u dat liever doet)</li>
+        <li> Kook de pasta al dente. Laat uitlekken en zet apart.</li>
+        <li>Schep in een grote kom de gremolata met de pasta tot deze goed bedekt is. Serveer onmiddellijk.</li>
+    </ol>
+</body>
+
+</html>
